[gd_scene load_steps=2 format=3 uid="uid://st3jd2mfxq5o"]

[ext_resource type="Script" uid="uid://6tnmcop6g8rq" path="res://_Scripts/panel.gd" id="1_ch3ps"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ch3ps")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 503.0
offset_right = 1153.0
offset_bottom = 647.0

[node name="Distance_Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 13.0
offset_right = 205.0
offset_bottom = 36.0
text = "Distance from Observer: "

[node name="Temperature_SpinBox" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 97.0
offset_right = 348.562
offset_bottom = 128.0
max_value = 40000.0
step = 10.0
value = 5780.0

[node name="Temperature_Label" type="Label" parent="Panel/Temperature_SpinBox"]
layout_mode = 0
offset_left = -250.0
offset_top = 3.0
offset_right = -7.0
offset_bottom = 26.0
text = "Stellar Object Temperature (K): "

[node name="StellarRadius_SpinBox" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 262.0
offset_top = 52.0
offset_right = 348.562
offset_bottom = 83.0
step = 0.001
value = 1.0

[node name="StellarRadius_Label" type="Label" parent="Panel/StellarRadius_SpinBox"]
layout_mode = 0
offset_left = -250.0
offset_right = -210.0
offset_bottom = 23.0
text = "Stellar Object Radius (SolRad):"

[node name="DependencyPanel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 361.0
offset_top = 2.0
offset_right = 771.0
offset_bottom = 142.0

[node name="Luminosity_Label" type="Label" parent="Panel/DependencyPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 48.0
offset_bottom = 29.0
text = "Stellar Luminosity (SolLum): "

[node name="AbMag_Label" type="Label" parent="Panel/DependencyPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 33.0
offset_right = 228.0
offset_bottom = 56.0
text = "Absolute Magnitude: "

[node name="ApMag_Label" type="Label" parent="Panel/DependencyPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 60.0
offset_right = 228.0
offset_bottom = 83.0
text = "Apparent Magnitude: "

[node name="Scale_SpinBox" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 920.0
offset_top = 10.0
offset_right = 1006.56
offset_bottom = 41.0
min_value = 1.0
max_value = 500.0
value = 100.0

[node name="Scale_Label" type="Label" parent="Panel/Scale_SpinBox"]
offset_left = -140.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = 26.0
text = "Pixels/Light Year:"

[connection signal="value_changed" from="Panel/Temperature_SpinBox" to="." method="_on_temperature_spin_box_value_changed"]
[connection signal="value_changed" from="Panel/StellarRadius_SpinBox" to="." method="_on_stellar_radius_spin_box_value_changed"]
[connection signal="value_changed" from="Panel/Scale_SpinBox" to="." method="_on_scale_spin_box_value_changed"]
